# py-jpdb

./: .envrc  .pythonrc  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml  validation.yml
jpdb/: __init__.py
jpdb/export/reviews/: __init__.py  utils.py
src/jpdb/: __init__.py
tests/: test_jpdb.py  test_jpdb_export_reviews.py  test_jpdb_export_reviews_utils.py
tests/fixtures/: reviews.json
