[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jpdb"
version = "0.3.2"
authors = [
    { name="Uwe Stuehler", email="uwe@bsdx.de" },
]
description = "An experiemental client for jpdb.io"
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["dependencies"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
"Homepage" = "https://github.com/ustuehler/py-jpdb"
"Bug Tracker" = "https://github.com/ustuehler/py-jpdb/issues"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
